# earnings-edge

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  nightly-ingest.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_deals_flows.py  0003_earnings.py  0004_options.py
backend/app/: config.py  db.py  main.py
backend/app/models/: __init__.py  deal.py  earnings.py  flow.py  ingest_run.py  options.py  price.py  stock.py
backend/app/routers/: earnings.py  market.py  patterns.py  positioning.py  stocks.py
backend/app/schemas/: earnings.py  market.py  patterns.py  positioning.py  stock.py
backend/app/services/: base_rates.py  pattern_match.py  positioning.py
backend/ingest/: run_nightly.py
backend/ingest/sources/: compute_iv_rank.py  compute_reactions.py  nse_deals.py  nse_delivery.py  nse_fii_dii.py  nse_options.py  nse_prices.py  nse_universe.py  screener_earnings.py
backend/ingest/utils/: http.py  run_log.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/stock/[symbol]/: page.tsx
frontend/src/components/: StockSearch.tsx
frontend/src/components/panels/: BaseRates.tsx  HistoricalEarnings.tsx  PatternMatch.tsx  Positioning.tsx
frontend/src/lib/: api.ts  types.ts
notebooks/: README.md
