[project]
name = "earnings-edge-backend"
version = "0.1.0"
description = "Indian equity earnings analytics — ingest + API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "tenacity>=8.5",
    "jugaad-data>=0.29",
    "yfinance>=0.2.40",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "ipykernel>=6.29",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
